Ensure navigation items are left-aligned for smaller displays.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,6 +36,10 @@ main {
     font-weight: 600;
 }
 
+.nav > li {
+  text-align: left;
+}
+
 /***************************************
  Main index styling.  Hero image, etc.
  ***************************************/
